fix: Right-side margin on mobile

--- a/src/components/ProjectsSection.scss
+++ b/src/components/ProjectsSection.scss
@@ -9,7 +9,7 @@
   padding: 1rem;
   &__project {
     outline: 1px solid #fff;
-    width: calc(100% - 1rem);
+    width: 100%;
     @media screen and (min-width: 600px) {
       width: calc(100% / 2 - 1rem);
     }
